--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,21 @@
         android:theme="@style/Theme.MiniUber">
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+
+            android:exported="true"
+
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity
+            android:name=".ModuleSelectorActivity"
+            >
+
         </activity>
     </application>
 
