--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,23 +10,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MiniUber">
         <activity
-            android:name=".MainActivity"
-
-            android:exported="true"
-
-            >
+            android:name=".app.features.SignInActivity"
+            android:exported="false" />
+        <activity
+            android:name=".app.features.SignUpActivity"
+            android:exported="false" />
+        <activity
+            android:name=".app.features.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-        <activity
-            android:name=".ModuleSelectorActivity"
-            >
-
-        </activity>
+        <activity android:name=".app.features.ModuleSelectorActivity" />
     </application>
 
 </manifest>
