--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -74,6 +75,11 @@ dependencies {
 
     //Facebook Auth
     implementation 'com.facebook.android:facebook-android-sdk:latest.release'
+
+    //implementation project(':rider')
+    implementation project(':driverModule')
+    implementation project(':riderModule')
+
 
 
 }
