--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 android {
@@ -26,6 +27,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -37,6 +41,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
     testImplementation 'junit:junit:4.13.2'
 
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -76,9 +82,9 @@ dependencies {
     //Facebook Auth
     implementation 'com.facebook.android:facebook-android-sdk:latest.release'
 
-    //implementation project(':rider')
-    implementation project(':driverModule')
-    implementation project(':riderModule')
+    //implementation project(':driver')
+   // implementation project(':driverModule')
+  //  implementation project(':riderModule')
 
 
 
