--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
 
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
     implementation 'com.google.android.gms:play-services-location:19.0.1'
@@ -49,7 +49,7 @@ dependencies {
 
 
     //FireBase
-    implementation 'com.google.firebase:firebase-database:20.0.4'
+    implementation 'com.google.firebase:firebase-database:20.0.5'
     implementation 'com.google.firebase:firebase-auth:21.0.3'
     // Gif Dependency
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
@@ -85,6 +85,8 @@ dependencies {
 
     //Rounded Image View
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //Lootie
+    implementation 'com.airbnb.android:lottie:3.4.1'
     //implementation project(':driver')
    // implementation project(':driverModule')
   //  implementation project(':riderModule')
