--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,8 +42,8 @@
             android:value="AIzaSyCwSNYh_1b4tVKBJzjQ-pKRiSuWVlF6MXA" />
 
         <activity
-            android:name=".app.features.commonFeatures.RiderMapsActivity"
-            android:exported="true"
+            android:name=".app.features.riderFeatures.RiderMapsActivity"
+            android:exported="false"
             android:label="@string/title_activity_maps" />
         <activity
             android:name=".app.features.riderFeatures.SignUpRiderActivity"
@@ -61,6 +61,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".app.features.commonFeatures.ModuleSelectorActivity" />
+        <activity
+            android:exported="true"
+            android:name=".app.features.driverFeatures.DriversMapsActivity" />
     </application>
 
 </manifest>
