--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MiniUber">
         <activity
+            android:name=".employeeFeatures.EmployeeActivity"
+            android:exported="false" />
+        <activity
             android:name=".app.features.commonFeatures.PhoneVerificationActivity"
             android:exported="false" />
         <activity
@@ -62,8 +65,8 @@
         </activity>
         <activity android:name=".app.features.commonFeatures.ModuleSelectorActivity" />
         <activity
-            android:exported="true"
-            android:name=".app.features.driverFeatures.DriversMapsActivity" />
+            android:name=".app.features.driverFeatures.DriversMapsActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
