Added a Navigation Drawer to the EmployeeActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,9 @@
         <activity
             android:name=".app.features.riderFeatures.SignUpRiderActivity"
             android:exported="false" />
+        <activity android:name=".app.features.employeeFeatures.EmployeeActivity"
+            android:exported="false"
+            />
         <activity
             android:name=".app.features.registration.SignInActivity"
             android:exported="false" />
