--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,12 +18,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MiniUber">
         <activity
-            android:name=".trip_info"
-            android:exported="false" />
-        <activity
-            android:name=".report_problem"
-            android:exported="false" />
-        <activity
             android:name=".app.features.commonFeatures.PhoneVerificationActivity"
             android:exported="false" />
         <activity
@@ -71,8 +65,8 @@
         </activity>
         <activity android:name=".app.features.commonFeatures.ModuleSelectorActivity" />
         <activity
-            android:name=".app.features.driverFeatures.DriversMapsActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:name=".app.features.driverFeatures.DriversMapsActivity" />
     </application>
 
 </manifest>
