Search for Drivers (XML )

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.miniuber"
-        minSdk 24
+        minSdk 28
         targetSdk 31
         versionCode 1
         versionName "1.0"
@@ -36,7 +36,8 @@ dependencies {
 
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
-
+    // Full GeoFire library for Realtime Database users
+    implementation 'com.firebase:geofire-android:3.1.0'
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
@@ -44,7 +45,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
     implementation 'com.google.android.gms:play-services-location:19.0.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-
+    implementation 'com.firebase:geofire:2.3.1'
     testImplementation 'junit:junit:4.13.2'
 
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -52,7 +53,9 @@ dependencies {
 
     //FireBase
     implementation 'com.google.firebase:firebase-database:20.0.5'
-    implementation 'com.google.firebase:firebase-auth:21.0.3'
+//auth
+    implementation 'com.google.firebase:firebase-auth:19.0.0'
+
     // Gif Dependency
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
     //Retrofit
@@ -81,8 +84,6 @@ dependencies {
 
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
 
-    //Facebook Auth
-    implementation 'com.facebook.android:facebook-android-sdk:latest.release'
 
 
     //Rounded Image View
@@ -95,10 +96,8 @@ dependencies {
 
     //for pinView in phoneVerification activity
     implementation 'com.github.GoodieBag:Pinview:v1.4'
-    //implementation project(':driver')
-   // implementation project(':driverModule')
-  //  implementation project(':riderModule')
     implementation 'androidx.browser:browser:1.0.0'
+
 
 
 
