--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.firebase:geofire:2.3.1'
     testImplementation 'junit:junit:4.13.2'
-
+    implementation 'com.google.maps.android:android-maps-utils:0.4'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.akexorcist:snap-time-picker:1.0.3'
 
