recycler view listener

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'com.google.maps.android:android-maps-utils:0.4'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.akexorcist:snap-time-picker:1.0.3'
+    implementation 'com.google.maps.android:android-maps-utils:0.4'
 
     //FireBase
     implementation 'com.google.firebase:firebase-database:20.0.5'
